<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Piston</string>

    <!-- Tab names -->
    <string name="tab_personal">Personal</string>
    <string name="tab_groups">Groups</string>
    <string name="tab_global">Global</string>
    <string-array name="tab_titles">
        <item>@string/tab_personal</item>
        <item>@string/tab_groups</item>
        <item>@string/tab_global</item>
    </string-array>

    <!-- General purpose -->
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="save_changes">Save Changes</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="group_code">Group ID</string>
    <string name="description">Description</string>
    <string name="create">Create</string>
    <string name="upload">Upload</string>
    <string name="title">Title</string>
    <string name="add">Add</string>
    <string name="profile">Profile</string>
    <string name="notifications">Notifications</string>
    <string name="settings">Settings</string>
    <string name="link_copied">Link Copied</string>
    <string name="file_path">File Path</string>
    <string name="error" translatable="false">Error</string>
    <string name="heart" translatable ="false">heart</string>
    <string name="confirmation" translatable="false">OK</string>
    <string name="confirmation_long">Got it</string>
    <string name="title_empty">This field is necessary</string>
    <string name="alternative">You can also</string>
    <string name="write_your_message">Enter your message here</string>
    <string name="no_internet">No internet connection, uploaded without image</string>

    <!-- User Data -->
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="birth_date">Date of Birth</string>

    <!-- Sign in strings -->
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign Up</string>
    <string name="user_hint">Username or Email</string>
    <string name="forgot_pass">Forgot password?</string>
    <string name="sign_up_msg">Don\&apos;t have an account?</string>
    <string name="sign_up_button"> Sign up Now!</string>
    <string name="welcome">Welcome</string>

    <!-- Register strings -->
    <string name="reg_title">Register</string>
    <string name="confirm_password">Confirm password</string>
    <string name="reg_date_format">dd/mm/yyyy</string>
    <string name="terms_text">I have read and accept the privacy policy</string>
    <string name="reg_btn">Register</string>
    <string name="reg_successful">Registration Successful</string>

    <!-- View Profile Strings -->
    <string name="view_profile_name">Full Name</string>
    <string name="view_profile_phone">Phone</string>
    <string name="view_profile_activity_title">Profile</string>
    <string name="view_profile_post">Featured post</string>
    <string name="view_profile_edit">Edit profile</string>
    <string name="insert_name">Insert your name</string>
    <string name="insert_phone_number">Insert your phone number</string>
    <string name="insert_birth_date">Insert your birth date</string>

    <!-- Create Post Strings -->
    <string name="create_post_activity_title">Create Post</string>
    <string name="post_content">Content</string>
    <string name="hint_post_content">Tell what happened</string>
    <string name="hint_input_title">Insert your Title</string>
    <string name="choose_picture">Choose Picture</string>
    <string name="attach_file">Attach File</string>
    <string name="create_post_error_message">Please insert a valid Post Name</string>


    <!-- Edit Post Strings -->
    <string name="edit_post_activity_title">Edit Post</string>
    <string name="edit_post_btn">Edit</string>
    <string name="change_picture">Change Picture</string>
    <string name="change_file">Change File</string>
    <string name="delete_post_btn">Delete Post</string>

    <!-- Reply Post Strings -->
    <string name="reply_post_activity_title">Reply Post</string>
    <string name="reply_btn">Reply</string>

    <!-- Create and edit Folder Strings -->
    <string name="create_folder_activity_title">Create Folder</string>
    <string name="folder_name">Folder Name</string>
    <string name="edit_folder_activity_title">Edit Folder</string>
    <string name="create_folder_title_taken">This Folder already exists</string>
    <string name="create_folder_error_message">Please insert a valid Folder Name</string>
    <string name="delete_folder">Delete folder</string>

    <!-- Join Group Strings -->
    <string name="join_group_activity_title">Join Group</string>
    <string name="join_group_error">This group does not exist</string>
    <string name="join_group_help">Use a group code provided by a group owner</string>
    <string name="join_successful">Joined group successfully!</string>
    <string name="join_group_already">You already joined this group</string>

    <!-- Create and edit Group Strings -->
    <string name="create_group_activity_title">Create Group</string>
    <string name="create_group_name">Group name</string>
    <string name="create_group_members">Members</string>
    <string name="group_link_help">Use this to invite members</string>
    <string name="create_group_error_message">You must specify a group title</string>
    <string name="group_image" translatable="false">Group Image</string>

    <!-- Moderate Group Strings -->
    <string name="group_settings_activity_title">Group Settings</string>
    <string name="delete_group">Delete Group</string>
    <string name="delete_selected">Delete selected</string>

    <!-- Create and edit Category Strings -->
    <string name="create_category_activity_title">Create Category</string>
    <string name="create_category_name">Category Name</string>
    <string name="create_category_nsfw">NSFW Category</string>
    <string name="category_link_help">Use this to share category</string>
    <string name="create_category_error_message">Please insert a valid Category Name</string>
    <string name="create_category_title_taken">This Category already exists</string>
    <string name="category_image" translatable="false">Category Image</string>
    <string name="delete_category">Delete category</string>

    <!-- Notifications Strings -->
    <string name="notifications_activity_title">Notifications</string>
    <string name="notifications_mark_as_read">Mark as read</string>

    <!-- UsernameError Strings -->
    <string name="wrong_user">This user does not exist</string>
    <string name="wrong_password">Wrong password</string>
    <string name="invalid_username">This username is already taken</string>
    <string name="invalid_password">Password must be at least 6 characters</string>
    <string name="invalid_password2">Passwords do not match</string>
    <string name="invalid_date">Enter a valid date: dd/mm/yyyy</string>
    <string name="email_taken">This email is already taken</string>
    <string name="username_req">Username required</string>
    <string name="email_req">Email required</string>
    <string name="email_invalid">Not a valid Email</string>
    <string name="pwd_req">Password required</string>
    <string name="verify_reg_field">Please confirm the fields and try again</string>
    <string name="passwords_not_match">Passwords don\'t match</string>
    <string name="unexpected_error">Unexpected Error</string>

    <!-- Settings Strings -->
    <string name="settings_activity_title">Settings</string>
    <string name="settings_sub">Default subscription to posts</string>
    <string name="settings_dark">Dark Mode</string>
    <string name="settings_sfw">Show NSFW Content</string>
    <string name="settings_blur_nsfw">Blur NSFW Images</string>
    <string name="reply_content">Reply Content</string>
    <string name="hint_reply_button">Insert your reply</string>
    <string name="content_description_media">Sample content description</string>
    <string name="reply">Reply</string>
    <string name="post_image">Post Image</string>
    <string name="profile_image">Profile Image</string>
    <string name="logout">Log Out</string>
    <string name="category_name">Category Name</string>
    <string name="category_info">Category Info</string>
    <string name="group_name">Group Name</string>
    <string name="folder_icon">Folder Icon</string>
    <string name="owner_header">By:</string>
    <string name="quote_header">said:</string>
    <string name="group_info">Group Info</string>
    <string name="create_category_image_error_message">You must add an image to the category. Make sure you have internet connection.</string>
    <string name="notification_post_indication">New Post from</string>
    <string name="notification_reply_indication">Reply from</string>
    <string name="replies">Replies</string>
    <string name="show_information">Info</string>
    <string name="members">\u0020Members</string>
    <string name="field">Field</string>
    <string name="edit_group_btn">Edit Title</string>
    <string name="make_moderator">Make Moderator</string>
    <string name="dismiss_as_moderator">Dismiss as Moderator</string>
    <string name="kick_from_group">Kick from Group</string>
    <string name="no_featured">This user has no public posts</string>
    <string name="no_featured_current">You have no public posts</string>
    <string name="no_replies">This post has no replies, be the first one to reply!</string>
    <string name="post_does_not_exist">This post does no longer exist</string>
    <string name="post_from">Post from\u0020</string>
    <string name="share_post">Share Post</string>
    <string name="not_belongs_to_group">You do not belong to the group that contains this post!</string>
    <string name="share_group">Share Group</string>
    <string name="add_note">Add note</string>
    <string name="settings_follow_theme">Follow System Theme</string>
    <string name="notifications_enabled">Push Notifications</string>
    <string name="pin_post">Pin Post</string>
    <string name="unpin_post">Unpin Post</string>
    <string name="pinned">This Post is now pinned</string>
    <string name="unpinned">This Post is no longer pinned</string>
    <string name="pinned_personal">This Note is now pinned</string>
    <string name="unpinned_personal">This Note is no longer pinned</string>

</resources>