<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".main.posts.PostActivity">

    <item
        android:id="@+id/delete_post"
        android:title="@string/delete_post_btn"
        android:onClick="deletePost"
        app:showAsAction="never" />
    <item
        android:id="@+id/edit_post"
        android:title="@string/edit_post_btn"
        android:icon="@drawable/baseline_edit_white_36"
        android:onClick="editPost"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/pin_post"
        android:title="@string/pin_post"
        android:onClick="pinPost"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/unpin_post"
        android:title="@string/unpin_post"
        android:visible="false"
        android:onClick="unpinPost"
        app:showAsAction="never" />
</menu>