<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".views.main.MainActivity">

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/baseline_person_white_24"
        android:title="@string/profile"
        android:onClick="openViewProfile"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/baseline_notifications_white_24"
        android:title="@string/notifications"
        android:onClick="openNotifications"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/navigation_settings"
        android:title="@string/settings"
        android:onClick="openSettings"
        app:showAsAction="never" />

    <item
        android:id="@+id/navigation_logout"
        android:title="@string/logout"
        android:onClick="logout"
        app:showAsAction="never" />

</menu>