<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".main.personal.group.GroupInfoActivity">

    <item
        android:id="@+id/share_group"
        android:title="@string/share_group"
        android:onClick="shareGroup"
        app:showAsAction="never" />

    <item
        android:id="@+id/delete_group"
        android:title="@string/delete_group"
        android:onClick="deleteGroup"
        app:showAsAction="never" />
    <item
        android:id="@+id/edit_title"
        android:title="@string/edit_group_btn"
        android:icon="@drawable/baseline_edit_white_36"
        android:onClick="editTitle"
        app:showAsAction="ifRoom" />
</menu>