<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main.MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/top_app_bar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="@string/app_name"
            style="@style/Theme.Piston.ToolbarStyle"
            app:menu="@menu/main_activity_top_app_bar"
            app:layout_scrollFlags="scroll|enterAlways|snap"/>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tab_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.tabs.TabItem
                android:id="@+id/personal_tab"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="@string/tab_personal"/>
            <com.google.android.material.tabs.TabItem
                android:id="@+id/groups_tab"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="@string/tab_groups"/>
            <com.google.android.material.tabs.TabItem
                android:id="@+id/global_tab"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="@string/tab_global"/>
        </com.google.android.material.tabs.TabLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/view_pager2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:fabSize="auto"
        app:srcCompat="@drawable/baseline_create_new_folder_black_24"
        android:contentDescription="@string/add"
        android:onClick="add"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>