<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main.settings.SettingsActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/settings_topAppBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="@string/settings"
            app:navigationIcon="@drawable/baseline_arrow_back_white_24"
            style="@style/Theme.Piston.ToolbarStyle"/>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
            android:layout_marginVertical="@dimen/small_separator"
            android:orientation="vertical"
            android:weightSum="2">

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/settings_subscribe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                app:thumbTint="@drawable/switch_thumb"
                app:trackTint="@drawable/switch_track"
                android:text="@string/settings_sub"/>

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/settings_darkMode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="false"
                app:thumbTint="@drawable/switch_thumb"
                app:trackTint="@drawable/switch_track"
                android:text="@string/settings_dark" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/settings_show_nsfw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                app:thumbTint="@drawable/switch_thumb"
                app:trackTint="@drawable/switch_track"
                android:text="@string/settings_sfw" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/settings_blur"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                app:thumbTint="@drawable/switch_thumb"
                app:trackTint="@drawable/switch_track"
                android:text="@string/settings_blur_nsfw" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1.5" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
