<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:checkable="true"
    android:layout_margin="@dimen/card_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/medium_separator">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/card_margin"
                android:text="@string/username"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textColor="?android:attr/textColorSecondary"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/medium_separator"
                android:text="@string/post_content"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textColor="?android:attr/textColorSecondary"
                android:maxLength="@integer/description_max_length"
                />

        </LinearLayout>

        <!-- Buttons -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/card_margin"
            android:orientation="horizontal"
            android:weightSum="100">

            <com.google.android.material.button.MaterialButton
                style="?attr/borderlessButtonStyle"
                android:layout_width="@dimen/zero"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/card_margin"
                android:layout_marginRight="@dimen/card_margin"
                android:layout_weight="30"
                android:text="@string/reply" />

            <Space
                android:layout_width="@dimen/zero"
                android:layout_height="wrap_content"
                android:layout_weight="60" />

            <ImageButton
                android:layout_width="@dimen/zero"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="@dimen/card_margin"
                android:layout_marginRight="@dimen/card_margin"
                android:layout_weight="10"
                android:background="@null"
                android:contentDescription="@string/content_description_media"
                android:src="@drawable/baseline_favorite_border_black_36" />

        </LinearLayout>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>