<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true"
    tools:context=".view.main.group.ModerateGroupActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/moderate_group_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginVertical="@dimen/activity_vertical_margin"
            android:text="@string/group_settings_activity_title"
            android:textSize="@dimen/title" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/moderate_group_name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/create_group_name"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textShortMessage" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/moderate_group_desc"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="@dimen/big_text_field_description"
            android:hint="@string/description"
            app:counterEnabled="true"
            app:counterMaxLength="@integer/description_max_length">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="@dimen/big_edit_text_description"
                android:maxLength="@integer/description_max_length"
                android:gravity="start" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/moderate_group_members"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="@dimen/big_text_field_description"
            android:hint="@string/create_group_members" >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/big_edit_text_description"
            android:maxLength="@integer/description_max_length"
            android:gravity="start" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/group_link"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/link"
            app:endIconDrawable="@drawable/baseline_content_copy_black_24"
            app:endIconMode="custom"
            app:helperText="@string/group_link_help"
            app:helperTextEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:editable="false"
                android:gravity="start"
                android:maxLength="@integer/description_max_length" />

        </com.google.android.material.textfield.TextInputLayout>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="@dimen/activity_vertical_margin"/>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin">

            <Button
                android:id="@+id/moderate_group_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:onClick="saveChanges"
                android:text="@string/save_changes" />

            <Button
                android:id="@+id/moderate_group_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:onClick="deleteGroup"
                android:text="@string/delete_group_btn"
                android:textColor="@color/red"
                style="?attr/materialButtonOutlinedStyle"/>

        </RelativeLayout>

    </LinearLayout>

</ScrollView>